// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichFieldEditor should focus the end of input on initial focus 1`] = `
<div
  className="rich-textarea-wrapper"
>
  <div
    className="editor-wrapper"
    onClick={[MockFunction]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <div
      className="withMinHeight"
    >
      <PluginEditor
        customStyleMap={{}}
        decorators={[]}
        defaultBlockRenderMap={true}
        defaultKeyBindings={true}
        editorKey="editor"
        editorState={
          EditorState {
            "_immutable": Immutable.Record {
              "allowUndo": true,
              "currentContent": Immutable.Record {
                "entityMap": {
                  "__add": [Function],
                  "__create": [Function],
                  "__get": [Function],
                  "__getLastCreatedEntityKey": [Function],
                  "__mergeData": [Function],
                  "__replaceData": [Function],
                  "add": [Function],
                  "create": [Function],
                  "get": [Function],
                  "getLastCreatedEntityKey": [Function],
                  "mergeData": [Function],
                  "replaceData": [Function],
                },
                "blockMap": Immutable.OrderedMap {
                  "123": Immutable.Record {
                    "key": "123",
                    "type": "unstyled",
                    "text": "foo",
                    "characterList": Immutable.List [
                      Immutable.Record {
                        "style": Immutable.OrderedSet [],
                        "entity": null,
                      },
                      Immutable.Record {
                        "style": Immutable.OrderedSet [],
                        "entity": null,
                      },
                      Immutable.Record {
                        "style": Immutable.OrderedSet [],
                        "entity": null,
                      },
                    ],
                    "depth": 0,
                    "data": Immutable.Map {},
                  },
                },
                "selectionBefore": Immutable.Record {
                  "anchorKey": "123",
                  "anchorOffset": 0,
                  "focusKey": "123",
                  "focusOffset": 0,
                  "isBackward": false,
                  "hasFocus": false,
                },
                "selectionAfter": Immutable.Record {
                  "anchorKey": "123",
                  "anchorOffset": 0,
                  "focusKey": "123",
                  "focusOffset": 0,
                  "isBackward": false,
                  "hasFocus": false,
                },
              },
              "decorator": null,
              "directionMap": Immutable.OrderedMap {
                "123": "LTR",
              },
              "forceSelection": false,
              "inCompositionMode": false,
              "inlineStyleOverride": null,
              "lastChangeType": null,
              "nativelyRenderedContent": null,
              "redoStack": Immutable.Stack [],
              "selection": Immutable.Record {
                "anchorKey": "123",
                "anchorOffset": 0,
                "focusKey": "123",
                "focusOffset": 0,
                "isBackward": false,
                "hasFocus": false,
              },
              "treeMap": Immutable.OrderedMap {
                "123": Immutable.List [
                  Immutable.Record {
                    "start": 0,
                    "end": 3,
                    "decoratorKey": null,
                    "leaves": Immutable.List [
                      Immutable.Record {
                        "start": 0,
                        "end": 3,
                      },
                    ],
                  },
                ],
              },
              "undoStack": Immutable.Stack [],
            },
          }
        }
        handleKeyCommand={[Function]}
        handlePastedText={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        plugins={
          [
            {
              "handleDroppedFiles": [Function],
            },
            {
              "handleReturn": [Function],
            },
            {
              "blockRendererFn": [Function],
              "decorator": [Function],
              "initialize": [Function],
            },
            {
              "blockRendererFn": [Function],
              "decorators": [
                {
                  "component": [Function],
                  "strategy": [Function],
                },
                {
                  "component": [Function],
                  "strategy": [Function],
                },
                {
                  "component": [Function],
                  "strategy": [Function],
                },
              ],
              "handleKeyCommand": [Function],
              "keyBindingFn": [Function],
            },
            {
              "MentionSuggestions": [Function],
              "decorators": [
                {
                  "component": [Function],
                  "strategy": [Function],
                },
                {
                  "component": [Function],
                  "strategy": [Function],
                },
              ],
              "getAccessibilityProps": [Function],
              "handleReturn": [Function],
              "initialize": [Function],
              "onChange": [Function],
              "onDownArrow": [Function],
              "onEscape": [Function],
              "onTab": [Function],
              "onUpArrow": [Function],
            },
            {
              "onChange": [Function],
            },
            {
              "decorators": [
                {
                  "component": [Function],
                  "strategy": [Function],
                },
              ],
              "onChange": [Function],
            },
            {
              "handlePastedFiles": [Function],
            },
            {
              "blockRenderMap": Immutable.Map {
                "ordered-list-item": {
                  "element": "li",
                  "wrapper": <QuotesWrapper
                    innerWrapper={
                      <ol
                        className="public-DraftStyleDefault-ol"
                      />
                    }
                  />,
                },
                "header-six": {
                  "element": "h6",
                  "wrapper": <QuotesWrapper />,
                },
                "header-four": {
                  "element": "h4",
                  "wrapper": <QuotesWrapper />,
                },
                "header-one": {
                  "element": "h1",
                  "wrapper": <QuotesWrapper />,
                },
                "unordered-list-item": {
                  "element": "li",
                  "wrapper": <QuotesWrapper
                    innerWrapper={
                      <ul
                        className="public-DraftStyleDefault-ul"
                      />
                    }
                  />,
                },
                "atomic": {
                  "element": "figure",
                  "wrapper": <QuotesWrapper />,
                },
                "unstyled": {
                  "aliasedElements": [
                    "p",
                  ],
                  "element": "div",
                },
                "header-two": {
                  "element": "h2",
                  "wrapper": <QuotesWrapper />,
                },
                "code-block": {
                  "element": "pre",
                  "wrapper": <QuotesWrapper
                    innerWrapper={
                      <pre
                        className="public-DraftStyleDefault-pre"
                      />
                    }
                  />,
                },
                "blockquote": {
                  "element": "blockquote",
                  "wrapper": <QuotesWrapper />,
                },
                "header-five": {
                  "element": "h5",
                  "wrapper": <QuotesWrapper />,
                },
                "header-three": {
                  "element": "h3",
                  "wrapper": <QuotesWrapper />,
                },
              },
              "blockStyleFn": [Function],
            },
          ]
        }
      />
      <Decorated(MentionSuggestions)
        canAddMention={false}
        onSearchChange={[MockFunction]}
        suggestions={Immutable.Map {}}
      />
    </div>
  </div>
</div>
`;

exports[`RichFieldEditor should handle shortcuts 1`] = `
[
  [
    EditorState {
      "_immutable": Immutable.Record {
        "allowUndo": true,
        "currentContent": Immutable.Record {
          "entityMap": {
            "__add": [Function],
            "__create": [Function],
            "__get": [Function],
            "__getLastCreatedEntityKey": [Function],
            "__mergeData": [Function],
            "__replaceData": [Function],
            "add": [Function],
            "create": [Function],
            "get": [Function],
            "getLastCreatedEntityKey": [Function],
            "mergeData": [Function],
            "replaceData": [Function],
          },
          "blockMap": Immutable.OrderedMap {
            "123": Immutable.Record {
              "key": "123",
              "type": "unstyled",
              "text": "foo",
              "characterList": Immutable.List [
                Immutable.Record {
                  "style": Immutable.OrderedSet [],
                  "entity": null,
                },
                Immutable.Record {
                  "style": Immutable.OrderedSet [],
                  "entity": null,
                },
                Immutable.Record {
                  "style": Immutable.OrderedSet [],
                  "entity": null,
                },
              ],
              "depth": 0,
              "data": Immutable.Map {},
            },
          },
          "selectionBefore": Immutable.Record {
            "anchorKey": "123",
            "anchorOffset": 0,
            "focusKey": "123",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
          "selectionAfter": Immutable.Record {
            "anchorKey": "123",
            "anchorOffset": 0,
            "focusKey": "123",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
        },
        "decorator": MultiDecorator {
          "decorators": Immutable.List [
            CompositeDraftDecorator {
              "_decorators": [
                {
                  "component": [Function],
                  "strategy": [Function],
                },
                {
                  "component": [Function],
                  "strategy": [Function],
                },
                {
                  "component": [Function],
                  "strategy": [Function],
                },
                {
                  "component": [Function],
                  "strategy": [Function],
                },
                {
                  "component": [Function],
                  "strategy": [Function],
                },
                {
                  "component": [Function],
                  "strategy": [Function],
                },
              ],
            },
          ],
        },
        "directionMap": Immutable.OrderedMap {
          "123": "LTR",
        },
        "forceSelection": false,
        "inCompositionMode": false,
        "inlineStyleOverride": null,
        "lastChangeType": null,
        "nativelyRenderedContent": null,
        "redoStack": Immutable.Stack [],
        "selection": Immutable.Record {
          "anchorKey": "123",
          "anchorOffset": 3,
          "focusKey": "123",
          "focusOffset": 3,
          "isBackward": false,
          "hasFocus": false,
        },
        "treeMap": Immutable.OrderedMap {
          "123": Immutable.List [
            Immutable.Record {
              "start": 0,
              "end": 3,
              "decoratorKey": null,
              "leaves": Immutable.List [
                Immutable.Record {
                  "start": 0,
                  "end": 3,
                },
              ],
            },
          ],
        },
        "undoStack": Immutable.Stack [],
      },
    },
  ],
  [
    EditorState {
      "_immutable": Immutable.Record {
        "allowUndo": true,
        "currentContent": Immutable.Record {
          "entityMap": {
            "__add": [Function],
            "__create": [Function],
            "__get": [Function],
            "__getLastCreatedEntityKey": [Function],
            "__mergeData": [Function],
            "__replaceData": [Function],
            "add": [Function],
            "create": [Function],
            "get": [Function],
            "getLastCreatedEntityKey": [Function],
            "mergeData": [Function],
            "replaceData": [Function],
          },
          "blockMap": Immutable.OrderedMap {
            "123": Immutable.Record {
              "key": "123",
              "type": "unstyled",
              "text": "foo",
              "characterList": Immutable.List [
                Immutable.Record {
                  "style": Immutable.OrderedSet [],
                  "entity": null,
                },
                Immutable.Record {
                  "style": Immutable.OrderedSet [],
                  "entity": null,
                },
                Immutable.Record {
                  "style": Immutable.OrderedSet [],
                  "entity": null,
                },
              ],
              "depth": 0,
              "data": Immutable.Map {},
            },
          },
          "selectionBefore": Immutable.Record {
            "anchorKey": "123",
            "anchorOffset": 0,
            "focusKey": "123",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
          "selectionAfter": Immutable.Record {
            "anchorKey": "123",
            "anchorOffset": 0,
            "focusKey": "123",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
        },
        "decorator": null,
        "directionMap": Immutable.OrderedMap {
          "123": "LTR",
        },
        "forceSelection": false,
        "inCompositionMode": false,
        "inlineStyleOverride": Immutable.OrderedSet [
          "BOLD",
        ],
        "lastChangeType": null,
        "nativelyRenderedContent": null,
        "redoStack": Immutable.Stack [],
        "selection": Immutable.Record {
          "anchorKey": "123",
          "anchorOffset": 0,
          "focusKey": "123",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "treeMap": Immutable.OrderedMap {
          "123": Immutable.List [
            Immutable.Record {
              "start": 0,
              "end": 3,
              "decoratorKey": null,
              "leaves": Immutable.List [
                Immutable.Record {
                  "start": 0,
                  "end": 3,
                },
              ],
            },
          ],
        },
        "undoStack": Immutable.Stack [],
      },
    },
  ],
]
`;
